--- a/src/scss/common/_variables.scss
+++ b/src/scss/common/_variables.scss
@@ -102,4 +102,8 @@ $folder-info-box-height: $spacing * 2 + $line-height-base * 2 * $font-size + $fo
 $labelbox-label-height: 24px;
 $labelbox-border-width: 2px;
 
+$labelitem-padding-y: $spacing * 0.2;
+$labelitem-padding-x: $spacing;
+$labelitem-margin-x: -$spacing;
+
 $window-panel-width: 320px;
