--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,7 @@
 @import "components/link";
 @import "components/tags";
 @import "components/labelbox";
+@import "components/labelitem";
 @import "components/switch";
 @import "components/alert";
 @import "components/progress";
