--- a/src/scss/common/_variables.scss
+++ b/src/scss/common/_variables.scss
@@ -107,3 +107,9 @@ $labelitem-padding-x: $spacing;
 $labelitem-margin-x: -$spacing;
 
 $window-panel-width: 320px;
+
+$main-container-width: 440px;
+
+$taskitem-icon-width: 32px;
+
+$list-item-padidng-x: #{$gutter-width / 2};
