--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,7 @@
 @import "components/tags";
 @import "components/labelbox";
 @import "components/labelitem";
+@import "components/taskitem";
 @import "components/switch";
 @import "components/alert";
 @import "components/progress";
