--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,10 +3,12 @@
 @import "common/layout";
 @import "components/text";
 @import "components/link";
+@import "components/loading";
 @import "components/tags";
 @import "components/labelbox";
 @import "components/labelitem";
 @import "components/taskitem";
+@import "components/items";
 @import "components/switch";
 @import "components/alert";
 @import "components/progress";
