fix(viewer): label item has no color

--- a/src/scss/components/_labelbox.scss
+++ b/src/scss/components/_labelbox.scss
@@ -54,7 +54,7 @@ labelbox {
         }
     }
 }
-@for $i from 1 to length($labelbox-colors) {
+@for $i from 1 to length($labelbox-colors) + 1 {
     $color: nth($labelbox-colors, $i);
 
     .labelbox-color-#{$i} {
