--- a/src/scss/components/_labelitem.scss
+++ b/src/scss/components/_labelitem.scss
@@ -42,7 +42,7 @@ labelitem {
     color: $gray-600;
 }
 
-@for $i from 1 to length($labelbox-colors) {
+@for $i from 1 to length($labelbox-colors) + 1 {
     $color: nth($labelbox-colors, $i);
 
     .labelitem-color-#{$i} {
