fix: clear compiler errors and warnings

--- a/app/assets/views/main.xml
+++ b/app/assets/views/main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 <lcui-app>
-  <resource type="text/css" src="assets/stylesheets/lcui.css"/>
+  <resource type="text/css" src="assets/stylesheets/lc-design.css"/>
   <resource type="text/css" src="assets/stylesheets/main.css"/>
   <resource type="text/css" src="assets/stylesheets/themes/default.css"/>
   <ui>
