build: update node-sass options

--- a/src/scss/common/_variables.scss
+++ b/src/scss/common/_variables.scss
@@ -1,5 +1,5 @@
-@import "../../../.repos/lcui.css/src/scss/functions";
-@import "../../../.repos/lcui.css/src/scss/variables";
+@import "lc-design/src/scss/functions";
+@import "lc-design/src/scss/variables";
 
 $blue: #1890ff;
 $primary-color: $blue;
